update route + swagger
